--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <img class="sc04-card_img" src="images/sasaki-san@2x.webp" alt="">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">佐々木さん</p>
-                  <p class="sc04-card-voice_p">リスクが少なく、安定して成果が見込めるので、すごく楽しくトレードが出来ています！<br>安心できる生活が出来て、心まで豊かになりまし</p>
+                  <p class="sc04-card-voice_p">リスクが少なく、安定して成果が見込めるので、すごく楽しくトレードが出来ています！<br>安心できる生活が出来て、心まで豊かになりました。</p>
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">小嶋さん</p>
-                  <p class="sc04-card-voice_p">ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番</p>
+                  <p class="sc04-card-voice_p">ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番の魅力だと思います。</p>
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
@@ -178,7 +178,7 @@
                 <img class="sc04-card_img" src="images/takeda-san@2x.webp" alt="">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">武田さん</p>
-                  <p class="sc04-card-voice_p">私のような初心者にも、すごく優しい方法でした。<br>少ないお金からでも始められますし、もっと多くの方に知って欲しいと思いました。
+                  <p class="sc04-card-voice_p">すごく分かりやすくて、楽しんで出来ています。<br>年金生活で毎日不安だったのが、ゆずさんのおかげで、楽しく過ごせるように変わりました！</p>
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
@@ -186,7 +186,7 @@
                 <img class="sc04-card_img" src="images/ooshiro-san@2x.webp" alt="">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">大城さん</p>
-                  <p class="sc04-card-voice_p">とってもシンプルで簡単なトレード法なのに、毎日のように成果が出せています。<br>自分の新しい夢に向かって、動き出せるようになりまし</p>
+                  <p class="sc04-card-voice_p">とってもシンプルで簡単なトレード法なのに、毎日のように成果が出せています。<br>自分の新しい夢に向かって、動き出せるようになりました！</p>
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
