--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="apple-touch-icon" href="images/favicon.ico" sizes="180x180">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="icon" href="images/favicon.ico" sizes="any">
+    <!-- 背景画像のプリロード -->
+    <link rel="preload" href="images/pc-head-bck@2x.webp" as="image">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -82,7 +84,7 @@
       <!-- 正確無比な値動き予測で安定利益を狙う -->
       <section class="section-03">
         <div class="w960">
-          <img class="section03-title_img" src="images/pc-sc03-title@2x.webp" alt="" width="883" height="166">
+          <img class="section03-title_img" src="images/pc-sc03-title@2x.webp" alt="" width="883" height="166" loading="lazy" decoding="async">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area">ゆず式ウィナーズトレードとは、<br class="sp-none"> 誰もが「豊かで安心できる毎日を過ごせる」をコンセプトに、<br
@@ -119,7 +121,7 @@
       <section class="section-04">
         <div class="w960">
           <!-- <h2>負け続きだったトレーダーでも<br>始めてすぐ<span class="fs-40px">に</span>大きな成功<span class="fs-40px">を</span>目指せます</h2> -->
-          <img class="section04-title_img" src="images/pc-sc04-title@2x.webp" alt="" width="883" height="166">
+          <img class="section04-title_img" src="images/pc-sc04-title@2x.webp" alt="" width="883" height="166" loading="lazy" decoding="async">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area">ゆず式ウィナーズトレードは、<br class="sp-none">トレード未経験の初心者でも即座に実践できるよう、<br
@@ -137,13 +139,13 @@
               </picture>
             </div>
             <!-- <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3> -->
-            <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99">
+            <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99" loading="lazy" decoding="async">
             <!-- <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy"              decoding="async"> -->
             <!-- 6人の感想 -->
             <div class="sc04-voices">
               <!-- 亀山さん -->
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182">
+                <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">亀山さん</p>
                   <p class="sc04-card-voice_p">プラスが積み重なるような、右肩上がりの結果になっています。<br>本当に安定して成果が目指せるので、将来への心配がなくなりました。</p>
@@ -151,7 +153,7 @@
                 </div>
               </div>
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/sasaki-san@2x.webp" alt="">
+                <img class="sc04-card_img" src="images/sasaki-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">佐々木さん</p>
                   <p class="sc04-card-voice_p">リスクが少なく、安定して成果が見込めるので、すごく楽しくトレードが出来ています！<br>安心できる生活が出来て、心まで豊かになりました。</p>
@@ -159,7 +161,7 @@
                 </div>
               </div>
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/nakanishi-san@2x.webp" alt="">
+                <img class="sc04-card_img" src="images/nakanishi-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">中西さん</p>
                   <p class="sc04-card-voice_p">私のような初心者にも、すごく優しい方法でした。<br>少ないお金からでも始められますし、もっと多くの方に知って欲しいと思いました。 </p>
@@ -167,7 +169,7 @@
                 </div>
               </div>
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="">
+                <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">小嶋さん</p>
                   <p class="sc04-card-voice_p">ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番の魅力だと思います。</p>
@@ -175,7 +177,7 @@
                 </div>
               </div>
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/takeda-san@2x.webp" alt="">
+                <img class="sc04-card_img" src="images/takeda-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">武田さん</p>
                   <p class="sc04-card-voice_p">すごく分かりやすくて、楽しんで出来ています。<br>年金生活で毎日不安だったのが、ゆずさんのおかげで、楽しく過ごせるように変わりました！</p>
@@ -183,7 +185,7 @@
                 </div>
               </div>
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/ooshiro-san@2x.webp" alt="">
+                <img class="sc04-card_img" src="images/ooshiro-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">大城さん</p>
                   <p class="sc04-card-voice_p">とってもシンプルで簡単なトレード法なのに、毎日のように成果が出せています。<br>自分の新しい夢に向かって、動き出せるようになりました！</p>
@@ -205,7 +207,7 @@
       <!-- 講師紹介 -->
       <section class="section-05">
         <div class="w960">
-          <img class="sc05-title_img pc-none" src="images/sp-sc05-title@2x.webp" alt="" width="800" height="207">
+          <img class="sc05-title_img pc-none" src="images/sp-sc05-title@2x.webp" alt="" width="800" height="207" loading="lazy" decoding="async">
           <div class="profile">
             <p class="name">松岡 ゆず</p>
             <p class="romaji">- Matsuoka Yuzu -</p>
@@ -213,14 +215,14 @@
               一部界隈で「稼がせるトレーダー」と呼ばれる。<br><br> 安定性と利益効率に特化した、<br class="sp-none"> ゆず式ウィナーズトレードを開発。<br><br>
               先の値動きを高い精度で予測するオリジナルメソッドを使って、<br class="sp-none"> 多大なる成果を上げる。<br><br> 今回、そのゆず式ウィナーズトレードをより多くの人に広めるため、<br
                 class="sp-none"> 完全無料のWEB講座を公開。</p>
-            <img class="profile_img pc-none" src="images/sp-sc05-yuzu-3@2x.webp" alt="" width="344" height="383">
+            <img class="profile_img pc-none" src="images/sp-sc05-yuzu-3@2x.webp" alt="" width="344" height="383" loading="lazy" decoding="async">
           </div>
         </div>
       </section>
       <!-- section-06 -->
       <!-- 損失額を最小限に抑えることで -->
       <section class="section-06">
-        <img class="section06-title_img" src="images/pc-sc06-title@2x.webp" alt="" width="694" height="168">
+        <img class="section06-title_img" src="images/pc-sc06-title@2x.webp" alt="" width="694" height="168" loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -249,7 +251,7 @@
       <!-- section-07 -->
       <!-- さらなる利益 -->
       <section class="section-07">
-        <img class="section07-title_img" src="images/pc-sc07-title@2x.webp" alt="" width="591" height="168">
+        <img class="section07-title_img" src="images/pc-sc07-title@2x.webp" alt="" width="591" height="168" loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -277,7 +279,7 @@
       <!-- section-08 -->
       <!-- ゆず式ウィナーズトレード -->
       <section class="section-08">
-        <img class="section08-title_img" src="images/pc-sc08-title@2x.webp" alt="" width="603" height="168">
+        <img class="section08-title_img" src="images/pc-sc08-title@2x.webp" alt="" width="603" height="168" loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -309,7 +311,7 @@
       <section class="section-09">
         <div class="w960">
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-1@2x.webp" alt="" width="896" height="138">
+            <img class="parallelogram" src="images/pc-sc09-title-1@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic1@2x.webp" alt="" width="207" height="197" loading="lazy"
               decoding="async">
             <ul>
@@ -327,7 +329,7 @@
             </ul>
           </div>
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138">
+            <img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200" loading="lazy"
               decoding="async">
             <ul>
@@ -345,7 +347,7 @@
             </ul>
           </div>
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-3@2x.webp" alt="" width="896" height="138">
+            <img class="parallelogram" src="images/pc-sc09-title-3@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic3@2x.webp" alt="" width="203" height="188" loading="lazy"
               decoding="async">
             <ul>
