--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <title>ゆず式ウィナーズトレード-無料WEB講座-</title>
-    <!-- アイキャッチ設定ここから -->
-    <!-- <meta property="og:title" content="適切なタイトル"> -->
-    <!-- <meta property="og:type" content="website"> -->
-    <!-- <meta property="og:url" content="ページのURL"> -->
-    <!-- <meta property="og:image" content="画像のURL"> -->
-    <!-- <meta property="og:site_name" content="サイト名"> -->
-    <!-- <meta property="og:description" content="適切な説明"> -->
-    <!-- <meta property="og:locale" content="ja_JP"> -->
-    <!-- アイキャッチ設定ここまで -->
     <meta name="ROBOTS" content="NOINDEX,NOFOLLOW,NOARCHIVE">
     <!-- ファビコン -->
     <link rel="apple-touch-icon" href="images/favicon.ico" sizes="180x180">
@@ -25,19 +16,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="./css/01.css">
-    <link rel="stylesheet" type="text/css" href="./css/02.css">
-    <link rel="stylesheet" type="text/css" href="./css/03.css">
-    <link rel="stylesheet" type="text/css" href="./css/04.css">
-    <link rel="stylesheet" type="text/css" href="./css/05.css">
-    <link rel="stylesheet" type="text/css" href="./css/06.css">
-    <link rel="stylesheet" type="text/css" href="./css/07.css">
-    <link rel="stylesheet" type="text/css" href="./css/08.css">
-    <link rel="stylesheet" type="text/css" href="./css/09.css">
-    <link rel="stylesheet" type="text/css" href="./css/10.css">
-    <link rel="stylesheet" type="text/css" href="./css/11.css">
-    <link rel="stylesheet" type="text/css" href="./css/animation.css">
-    <!-- リリース時PHPの部分削除 -->
   </head>
 
   <body>
@@ -84,7 +62,8 @@
       <!-- 正確無比な値動き予測で安定利益を狙う -->
       <section class="section-03">
         <div class="w960">
-          <img class="section03-title_img" src="images/pc-sc03-title@2x.webp" alt="" width="883" height="166" loading="lazy" decoding="async">
+          <img class="section03-title_img" src="images/pc-sc03-title@2x.webp" alt="" width="883" height="166"
+            loading="lazy" decoding="async">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area">ゆず式ウィナーズトレードとは、<br class="sp-none"> 誰もが「豊かで安心できる毎日を過ごせる」をコンセプトに、<br
@@ -92,7 +71,7 @@
                   class="sp-none"> 開発された安定重視のトレード法です。<br><br>「安定して利益を出し続ける」という一点にフォーカスし、<br
                   class="sp-none">損失を最小限に抑えながら安定して利益を積み上げるロジックで、<br class="sp-none">
                 <br class="sp-none">誰もが安心しながら豊かな人生を実現します。<br>
-                <br>安定利益の秘訣は、ずばり<span class="text-marker-yellow">トレンドにあります。</span>
+                <br>安定利益の秘訣は、ずばり<span class="text-marker-yellow text-underline">トレンドにあります。</span>
                 <br>チャートに大きなトレンドが生まれると、<br class="sp-none">その中に、着実な利益を見込めるチャンス。<br>
                 <br> 利益の狙い目となる<span class="text-red text-bold">スナイプポイント</span>が生まれます。<br>
                 <br>トレンドが生まれた際に出現する、<br class="sp-none"> このスナイプポイントを、<br class="sp-none">
@@ -121,7 +100,8 @@
       <section class="section-04">
         <div class="w960">
           <!-- <h2>負け続きだったトレーダーでも<br>始めてすぐ<span class="fs-40px">に</span>大きな成功<span class="fs-40px">を</span>目指せます</h2> -->
-          <img class="section04-title_img" src="images/pc-sc04-title@2x.webp" alt="" width="883" height="166" loading="lazy" decoding="async">
+          <img class="section04-title_img" src="images/pc-sc04-title@2x.webp" alt="" width="883" height="166"
+            loading="lazy" decoding="async">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area">ゆず式ウィナーズトレードは、<br class="sp-none">トレード未経験の初心者でも即座に実践できるよう、<br
@@ -139,13 +119,15 @@
               </picture>
             </div>
             <!-- <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3> -->
-            <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99" loading="lazy" decoding="async">
+            <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99"
+              loading="lazy" decoding="async">
             <!-- <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy"              decoding="async"> -->
             <!-- 6人の感想 -->
             <div class="sc04-voices">
               <!-- 亀山さん -->
               <div class="sc04-card">
-                <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182" loading="lazy" decoding="async">
+                <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182"
+                  loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">亀山さん</p>
                   <p class="sc04-card-voice_p">プラスが積み重なるような、右肩上がりの結果になっています。<br>本当に安定して成果が目指せるので、将来への心配がなくなりました。</p>
@@ -172,7 +154,8 @@
                 <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="" loading="lazy" decoding="async">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">小嶋さん</p>
-                  <p class="sc04-card-voice_p">ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番の魅力だと思います。</p>
+                  <p class="sc04-card-voice_p">
+                    ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番の魅力だと思います。</p>
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
@@ -207,7 +190,8 @@
       <!-- 講師紹介 -->
       <section class="section-05">
         <div class="w960">
-          <img class="sc05-title_img pc-none" src="images/sp-sc05-title@2x.webp" alt="" width="800" height="207" loading="lazy" decoding="async">
+          <img class="sc05-title_img pc-none" src="images/sp-sc05-title@2x.webp" alt="" width="800" height="207"
+            loading="lazy" decoding="async">
           <div class="profile">
             <p class="name">松岡 ゆず</p>
             <p class="romaji">- Matsuoka Yuzu -</p>
@@ -215,27 +199,27 @@
               一部界隈で「稼がせるトレーダー」と呼ばれる。<br><br> 安定性と利益効率に特化した、<br class="sp-none"> ゆず式ウィナーズトレードを開発。<br><br>
               先の値動きを高い精度で予測するオリジナルメソッドを使って、<br class="sp-none"> 多大なる成果を上げる。<br><br> 今回、そのゆず式ウィナーズトレードをより多くの人に広めるため、<br
                 class="sp-none"> 完全無料のWEB講座を公開。</p>
-            <img class="profile_img pc-none" src="images/sp-sc05-yuzu-3@2x.webp" alt="" width="344" height="383" loading="lazy" decoding="async">
+            <img class="profile_img pc-none" src="images/sp-sc05-yuzu-3@2x.webp" alt="" width="344" height="383"
+              loading="lazy" decoding="async">
           </div>
         </div>
       </section>
       <!-- section-06 -->
       <!-- 損失額を最小限に抑えることで -->
       <section class="section-06">
-        <img class="section06-title_img" src="images/pc-sc06-title@2x.webp" alt="" width="694" height="168" loading="lazy" decoding="async">
+        <img class="section06-title_img" src="images/pc-sc06-title@2x.webp" alt="" width="694" height="168"
+          loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area"> ゆず式ウィナーズトレードだけが持つ大きな強み。<br><br> それは<span
                   class="text-red text-bold">損失額を最小限に抑えるロジック</span>です。<br><br> ゆず式ウィナーズトレードは、高い勝率を誇るノウハウですが、<br
                   class="sp-none"> トレードである以上、どんなに分析や計算を突き詰めても、<br class="sp-none"> 100%勝ち続けることは出来ません。<br><br>
-                どこかで必ず、損失を被るタイミングが来てしまいます。<br><br>
-                <span class="text-marker-yellow">だからこそ、ゆず式ウィナーズトレード</span>では、<br class="sp-none">
-                勝率の高さを突き詰めるのと同時に、<br><br>
+                どこかで必ず、損失を被るタイミングが来てしまいます。<br><br>だからこそ、ゆず式ウィナーズトレードでは、<br class="sp-none"> 勝率の高さを突き詰めるのと同時に、<br><br>
                 <span class="text-darkblue text-bold">負けた際に失う額を、限界まで抑える工夫</span>を施しました。<br><br>
                 ゆず式ウィナーズトレードが追及しているのは、<br class="sp-none"> とにかく安定して資産を増やし続けること。<br><br> 勝率を高め、損失の機会を減らすだけでなく、<br><br>
                 失う金額そのものを最小限にすることで、<br class="sp-none">
-                <span class="text-marker-yellow">右肩上がりの資産増加を実現します。</span>
+                <span class="text-marker-yellow text-underline">右肩上がりの資産増加を実現します。</span>
               </div>
               <!-- <img class="shadow_img" src="images/pc-sc06-pic@2x.webp" alt="" width="320" height="200" loading="lazy"
                 decoding="async"> -->
@@ -251,7 +235,8 @@
       <!-- section-07 -->
       <!-- さらなる利益 -->
       <section class="section-07">
-        <img class="section07-title_img" src="images/pc-sc07-title@2x.webp" alt="" width="591" height="168" loading="lazy" decoding="async">
+        <img class="section07-title_img" src="images/pc-sc07-title@2x.webp" alt="" width="591" height="168"
+          loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -279,7 +264,8 @@
       <!-- section-08 -->
       <!-- ゆず式ウィナーズトレード -->
       <section class="section-08">
-        <img class="section08-title_img" src="images/pc-sc08-title@2x.webp" alt="" width="603" height="168" loading="lazy" decoding="async">
+        <img class="section08-title_img" src="images/pc-sc08-title@2x.webp" alt="" width="603" height="168"
+          loading="lazy" decoding="async">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -311,7 +297,8 @@
       <section class="section-09">
         <div class="w960">
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-1@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
+            <img class="parallelogram" src="images/pc-sc09-title-1@2x.webp" alt="" width="896" height="138"
+              loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic1@2x.webp" alt="" width="207" height="197" loading="lazy"
               decoding="async">
             <ul>
@@ -329,7 +316,8 @@
             </ul>
           </div>
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
+            <img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138"
+              loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200" loading="lazy"
               decoding="async">
             <ul>
@@ -347,7 +335,8 @@
             </ul>
           </div>
           <div class="card">
-            <img class="parallelogram" src="images/pc-sc09-title-3@2x.webp" alt="" width="896" height="138" loading="lazy" decoding="async">
+            <img class="parallelogram" src="images/pc-sc09-title-3@2x.webp" alt="" width="896" height="138"
+              loading="lazy" decoding="async">
             <img class="pic" src="images/pc-sc09-pic3@2x.webp" alt="" width="203" height="188" loading="lazy"
               decoding="async">
             <ul>
